[package]
name = "cue-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
pest = "2.1.3"
pest_consume = "1.1.1"
pest_derive = "2.1.0"
pretty_assertions = "1.2.1"
regex = { version = "1.6.0", features = ["pattern"] }
