[package]
name = "cue-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
pest = "2.6.0"
pest_consume = "1.1.3"
pest_derive = "2.6.0"
pretty_assertions = "1.3.0"
regex = { version = "1.8.1", features = ["pattern"] }
