[package]
name = "cue-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.1"
json = "0.12.4"
lazy_static = "1.4.0"
pest = "2.6.0"
pest_derive = "2.6.0"
pretty_assertions = "1.3.0"
regex = { version = "1.8.1", features = ["pattern"] }
rpds = "1.0.1"
ebnf = { path = "./ebnf" }
